--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+      <meta
+        name="google-signin-client_id"
+        content="your-client-ID.apps.googleusercontent.com"
+      />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
