--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-pIXF-3kG9zM9OEuE9UiEVAeTE2uTLIo&libraries=places">-->
-<!--    </script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-pIXF-3kG9zM9OEuE9UiEVAeTE2uTLIo&libraries=places">
+    </script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
